Fixed issue of synthesized bold too strong on Safari

--- a/bikespace_dashboard/css/components/stylevars.css
+++ b/bikespace_dashboard/css/components/stylevars.css
@@ -1,11 +1,13 @@
 @font-face {
   font-family: "Open Sans";
   src: url(../../assets/OpenSans-VariableFont_wdth,wght.ttf);
+  font-weight: 300 800;
 }
 @font-face {
   font-family: "Open Sans Italic";
   src: url(../../assets/OpenSans-Italic-VariableFont_wdth,wght.ttf);
   font-style: italic;
+  font-weight: 300 800;
 }
 
 :root {
